# linux-gpu-monitor

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  build.ts
.github/workflows/: build.yml
assets/: manifest.json
assets/propertyInspector/: gpuMonitor.html
src/: gpu.rs  main.rs
