[package]
name = "linux-gpu-monitor"
version = "1.0.0"
authors = ["asetapen"]
license = "MIT"
edition = "2024"

[dependencies]
openaction = "2.6"
anyhow = "1.0"
log = "0.4"
simplelog = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
